# own_repos

./: .gitignore  README.md
FarePredictor/: .gitignore  README.md
FarePredictor/dataset/: README.md
FarePredictor/report/: Report_doc.docx  Report_file.docx  Report_slides_doc.pptx
FarePredictor/visualize_prepare_data/: DataAnalysis.xlsx  data_visualizations_preparation.py  helper_visualization.py
caffe_own/: README.md
cifar10_128/test/: airplanes_128_img47991.npy  airplanes_128_img47994.npy  airplanes_128_img48001.npy  airplanes_128_img48013.npy  airplanes_128_img48024.npy  airplanes_128_img48026.npy  airplanes_128_img48032.npy  airplanes_128_img48054.npy  airplanes_128_img48059.npy  airplanes_128_img48069.npy  airplanes_128_img48071.npy  airplanes_128_img48094.npy  airplanes_128_img48096.npy  airplanes_128_img48100.npy  airplanes_128_img48105.npy  airplanes_128_img48108.npy  airplanes_128_img48109.npy  airplanes_128_img48119.npy  airplanes_128_img48130.npy  airplanes_128_img48136.npy  airplanes_128_img48145.npy  airplanes_128_img48147.npy  airplanes_128_img48148.npy  airplanes_128_img48174.npy  airplanes_128_img48187.npy  airplanes_128_img48197.npy  airplanes_128_img48212.npy  airplanes_128_img48217.npy  airplanes_128_img48239.npy  airplanes_128_img48246.npy  airplanes_128_img48252.npy  airplanes_128_img48254.npy  airplanes_128_img48257.npy  airplanes_128_img48266.npy  airplanes_128_img48280.npy  airplanes_128_img48289.npy  airplanes_128_img48291.npy  airplanes_128_img48295.npy  airplanes_128_img48317.npy  airplanes_128_img48318.npy  (+350 more)
cifar10_128/train/: airplanes_128_img10010.npy  airplanes_128_img10020.npy  airplanes_128_img10031.npy  airplanes_128_img10043.npy  airplanes_128_img10050.npy  airplanes_128_img10061.npy  airplanes_128_img10064.npy  airplanes_128_img10115.npy  airplanes_128_img1012.npy  airplanes_128_img10124.npy  airplanes_128_img10130.npy  airplanes_128_img10141.npy  airplanes_128_img10148.npy  airplanes_128_img10151.npy  airplanes_128_img10159.npy  airplanes_128_img10197.npy  airplanes_128_img10202.npy  airplanes_128_img10205.npy  airplanes_128_img10212.npy  airplanes_128_img10215.npy  airplanes_128_img10243.npy  airplanes_128_img10265.npy  airplanes_128_img10266.npy  airplanes_128_img10267.npy  airplanes_128_img10275.npy  airplanes_128_img10297.npy  airplanes_128_img10301.npy  airplanes_128_img10323.npy  airplanes_128_img10326.npy  airplanes_128_img10330.npy  airplanes_128_img10332.npy  airplanes_128_img10334.npy  airplanes_128_img10338.npy  airplanes_128_img10340.npy  airplanes_128_img10343.npy  airplanes_128_img10353.npy  airplanes_128_img10355.npy  airplanes_128_img10365.npy  airplanes_128_img1039.npy  airplanes_128_img10394.npy  (+9359 more)
computer_vision_img_vid/LBP_extract_module/: Makefile  README.md
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/: .cproject  .project  Makefile  Makefile.am  Makefile.in  plugin.c
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/.deps/: libgstsleepdetector_la-BlobDetection.Plo  libgstsleepdetector_la-Extractor_core.Plo  libgstsleepdetector_la-MomentNormalizer.Plo  libgstsleepdetector_la-RetinexLib.Plo  libgstsleepdetector_la-gstblobdetector.Plo  libgstsleepdetector_la-gstcolorretinex.Plo  libgstsleepdetector_la-gstdistancetransform.Plo  libgstsleepdetector_la-gstmomentnormalization.Plo  libgstsleepdetector_la-gstskindetector.Plo  libgstsleepdetector_la-metainfo.Plo  libgstsleepdetector_la-norm.Plo  libgstsleepdetector_la-plugin.Plo
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/common/: metainfo.c  metainfo.h
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/gst-BlobDetector/src/: BlobDetection.c  Extractor_core.c  Makefile.am  gstblobdetector.c  gstblobdetector.h
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/gst-BlobDetector/src/includes/: BlobDetection.h  Extractor.h
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/gst-DistanceTransform/: _configure_ac
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/gst-DistanceTransform/src/: Makefile.am  gstdistancetransform.c  gstdistancetransform.h
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/gst-Normalizer/: _Makefile_am  _configure_ac
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/gst-Normalizer/src/: Makefile.am  MomentNormalizer.c  gstmomentnormalization.c  gstmomentnormalization.h
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/gst-Normalizer/src/includes/: MomentNormalizer.h  Normalizer.h
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/gst-Retinex/: _configure_ac
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/gst-Retinex/src/: Makefile.am  RetinexLib.c  gstcolorretinex.c  gstcolorretinex.h  norm.c
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/gst-Retinex/src/includes/: RetinexLib.h  norm.h
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/gst-SkinDetector/: _configure_ac
computer_vision_img_vid/gstreamer/gst_imgproc/plugin/gst-SkinDetector/src/: Makefile.am  gstskindetector.c  gstskindetector.h
computer_vision_img_vid/gstreamer/gst_rgb2gray/src/: Makefile  Makefile.am  Makefile.in  gstrgb2gray.c  gstrgb2gray.h
computer_vision_img_vid/gstreamer/gst_rgb2gray/src/.deps/: libgstrgb2gray_la-gstrgb2gray.Plo
computer_vision_img_vid/gstreamer/gst_rgbmapping/src/: Makefile  Makefile.am  Makefile.in  gstrgbmapping.c  gstrgbmapping.h
computer_vision_img_vid/gstreamer/gst_rgbmapping/src/.deps/: libgstrgbmapping_la-gstrgbmapping.Plo
for_testing/: dct2rgb.py
machine_and_deep_learning/: README.md
miscellaneous/wavpack_gstreamer/WavpackWithTag/src/: Makefile  Makefile.am  gstwavpackcommon.c  gstwavpackcommon.h  gstwavpackwithtag.c  gstwavpackwithtag.h
miscellaneous/wavpack_gstreamer/WavpackWithTag/src/.deps/: libgstwavpackwithtag_la-gstwavpackcommon.Plo  libgstwavpackwithtag_la-gstwavpackwithtag.Plo
miscellaneous/wavpack_gstreamer/wavpacksink/src/: Makefile  Makefile.am  gstwavpacksink.c  gstwavpacksink.h  metainfo.c  metainfo.h
miscellaneous/wavpack_gstreamer/wavpacksink/src/.deps/: libgstwavpacksink_la-gstwavpacksink.Plo  libgstwavpacksink_la-metainfo.Plo
(+1860 files in other folders)
